Fix formatting bug with empty headers (add overflow:auto), change colors, update formatting.

--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@ body {
     height: 100vh;
     margin: 0;
     font-family: sans-serif;
-    -webkit-text-stroke-color: black;
+    -webkit-text-stroke-color: red;
 }
 
 .leftText {
@@ -17,18 +17,22 @@ body {
 
 #main {
     text-align: center;
-    color: #373737;
     -webkit-box-shadow: inset 0 0 2.5vh #595959;
     -moz-box-shadow: inset 0 0 2.5vh #595959;
     box-shadow: inset 0 0 2.5vh #595959;
 }
 
-header {
+#announcementTitle {
+    color: #191919;
     font-family: sans-serif;
+    vertical-align: bottom;
+    margin: 5vh 2vh;
     font-size: 15vh;
 }
 
-#subParagraph {
+#announcementBody {
+    color: #363636;
+    margin: 5vh 2vh;
     font-size: 10vh;
 }
 
@@ -37,73 +41,4 @@ img {
     min-height: 100%;
     max-height: 100%;
     margin: auto;
-}
-
-.marquee {
-    height: 10vh;
-    overflow: hidden;
-    position: relative;
-    white-space: nowrap;
-}
-.marquee #text1{
-    font-size: 8vh;
-    font-weight: normal;
-    color: white;
-    position: absolute;
-    width: max-content;
-    height: 100%;
-    margin: 0;
-    line-height: 10vh;
-    text-align: center;
-    /* Starting position */
-    -moz-transform:translateX(100%);
-    -webkit-transform:translateX(100%);
-    transform:translateX(100%);
-    /* Apply animation to this element */
-    -moz-animation: marquee1 60s steps(450) infinite;
-    -webkit-animation: marquee1 60s steps(450) infinite;
-    animation: marquee1 60s steps(450) infinite;
-    will-change: transform;
-}
-.marquee #text2{
-    font-size: 8vh;
-    font-weight: normal;
-    color: white;
-    position: absolute;
-    width: max-content;
-    height: 100%;
-    margin: 0;
-    line-height: 10vh;
-    text-align: center;
-    /* Starting position */
-    -moz-transform:translateX(100%);
-    -webkit-transform:translateX(100%);
-    transform:translateX(100%);
-    /* Apply animation to this element */
-    -moz-animation: marquee1 60s steps(450) infinite;
-    -webkit-animation: marquee1 60s steps(450) infinite;
-    animation: marquee1 60s steps(450) infinite;
-    animation-delay: 30s;
-    will-change: transform;
-}
-/* Move it (define the animation) */
-@-moz-keyframes marquee1 {
-    0%   { -moz-transform: translateX(100%); }
-    100% { -moz-transform: translateX(-100%); }
-}
-@-webkit-keyframes marquee1 {
-    0%   { -webkit-transform: translateX(100%); }
-    100% { -webkit-transform: translateX(-100%); }
-}
-@keyframes marquee1 {
-    0%   {
-        -moz-transform: translateX(100%); /* Firefox bug fix */
-        -webkit-transform: translateX(100%); /* Firefox bug fix */
-        transform: translateX(100%);
-    }
-    100% {
-        -moz-transform: translateX(-100%); /* Firefox bug fix */
-        -webkit-transform: translateX(-100%); /* Firefox bug fix */
-        transform: translateX(-100%);
-    }
 }
